--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "listomatic-node-mongo",
+  "name": "Journal-App",
   "version": "0.0.0",
   "description": "listomatic node server with mongo storage",
   "main": "app.js",
@@ -15,6 +15,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Daniel Zappala",
+  "author": "Corbin Byers, Nick Clawson, and Mitch Steed",
   "license": "GPL"
 }
